k8s/02-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
  namespace: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-db
  template:
    metadata:
      labels:
        app: orders-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "user", "-d", "orders_db"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: orders
spec:
  selector:
    app: orders-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
