k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-redis
  template:
    metadata:
      labels:
        app: orders-redis
    spec:
      containers:
        - name: redis
          image: redis:7.2
          ports:
            - containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: orders-redis
spec:
  selector:
    app: orders-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
